feat(mobile): add first mobile implementation

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="favicon.ico" rel="icon" type="image/x-icon">
+  <link href="assets/icons/favicon.svg" rel="icon" type="image/svg+xml">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700|Material+Icons+Outlined" rel="stylesheet">
 
   <meta content="#1976d2" name="theme-color">
